--- a/Template/default/admin/body.twig
+++ b/Template/default/admin/body.twig
@@ -42,7 +42,7 @@
     </div>
     {% block footer_jquery %}
       <script src="{{ LIBRARY_URL }}/jquery/jquery/1.10.2/jquery.min.js"></script>  
-      <script src="{{ LIBRARY_URL }}/3.0.3/js/bootstrap.min.js"></script>
+      <script src="{{ LIBRARY_URL }}/bootstrap/3.0.3/js/bootstrap.min.js"></script>
     {% endblock footer_jquery %}
     {% block footer %}
       <script type="text/javascript">
