--- a/Template/default/css/admin.css
+++ b/Template/default/css/admin.css
@@ -8,6 +8,13 @@
   @license MIT License (MIT) http://www.opensource.org/licenses/MIT
 */
 
+.container {
+  padding-left: 0;
+  padding-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 /*
   Label for the form fields
 */
