--- a/Template/default/pattern/admin/simple/edit.contact.twig
+++ b/Template/default/pattern/admin/simple/edit.contact.twig
@@ -20,7 +20,7 @@
     <legend>{{ 'Contact'|trans }}</legend>
     <div class="row">
       <div class="col-lg-3 col-md-3 col-sm-4">
-        <label>{{ 'contact_id'|trans }}</label>
+        <label>{{ 'contact_id'|humanize|trans }}</label>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-8">
         {% if form.contact_id.vars.value > 0 %}
