--- a/Template/default/pattern/admin/simple/list.category.twig
+++ b/Template/default/pattern/admin/simple/list.category.twig
@@ -12,7 +12,7 @@
 <div class="table-responsive">
   <table class="table table-striped table-condensed table-hover">
     <thead>
-      <th>{{ 'ID'|trans }}</th>
+      <th>{{ 'ID'|humanize|trans }}</th>
       <th>{{ 'Category name'|trans }}</th>
       <th>{{ 'Category name (translated)'|trans }}</th>
       <th>{{ 'category_type_access'|humanize|trans }}</th>
