--- a/Template/default/pattern/admin/simple/list.tag.twig
+++ b/Template/default/pattern/admin/simple/list.tag.twig
@@ -12,7 +12,7 @@
 <div class="table-responsive">
   <table class="table table-striped table-condensed table-hover">
     <thead>
-      <th>{{ 'ID'|trans }}</th>
+      <th>{{ 'ID'|humanize|trans }}</th>
       <th>{{ 'Tag'|trans }}</th>
       <th>{{ 'Tag (translated)'|trans }}</th>
       <th>{{ 'Description'|trans }}</th>
