--- a/Template/default/pattern/admin/simple/list.title.twig
+++ b/Template/default/pattern/admin/simple/list.title.twig
@@ -12,7 +12,7 @@
 <div class="table-responsive">
   <table class="table table-striped table-condensed table-hover">
     <thead>
-      <th>{{ 'ID'|trans }}</th>
+      <th>{{ 'ID'|humanize|trans }}</th>
       <th>{{ 'Identifier'|trans }}</th>
       <th>{{ 'Short name'|trans }}</th>
       <th>{{ 'Short name (translated)'|trans }}</th>
